añadido de oagunas

--- a/frontend/inicio.html
+++ b/frontend/inicio.html
@@ -8,14 +8,21 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="nav-logo">LicoresPage</div>
+        <div class="nav-brand">
+            <div class="nav-logo"> LicoresPage</div>
+        </div>
         <ul class="nav-links">
-            <li><a href="inicio.html" class="active">Inicio</a></li>
-            <li><a href="#">Productos</a></li>
-            <li><a href="#">Sobre Nosotros</a></li>
-            <li><a href="#">Contacto</a></li>
-            <li><a href="#">Iniciar Sesión</a></li>
+            <li><a href="inicio.html" class="active"> Inicio</a></li>
+            <li><a href="productos.html"> Productos</a></li>
+            <li><a href="sobre-nosotros.html">ℹ Nosotros</a></li>
+            <li><a href="contacto.html"> Contacto</a></li>
         </ul>
+        <div class="nav-actions">
+            <a href="carrito.html" class="nav-icon" id="carrito-btn">
+                 <span class="cart-count">0</span>
+            </a>
+            <a href="cuenta.html" class="nav-icon"> Cuenta</a>
+        </div>
     </nav>
     <main>
             <section class="hero">
