modificacion estik¿los

--- a/frontend/carrito.html
+++ b/frontend/carrito.html
@@ -10,19 +10,19 @@
 <body>
     <nav class="navbar">
         <div class="nav-brand">
-            <div class="nav-logo">🍷 LicoresPage</div>
+            <div class="nav-logo"> LicoresPage</div>
         </div>
         <ul class="nav-links">
-            <li><a href="inicio.html">🏠 Inicio</a></li>
-            <li><a href="productos.html">📦 Productos</a></li>
-            <li><a href="sobre-nosotros.html">ℹ️ Nosotros</a></li>
-            <li><a href="contacto.html">📞 Contacto</a></li>
+            <li><a href="inicio.html"> Inicio</a></li>
+            <li><a href="productos.html"> Productos</a></li>
+            <li><a href="sobre-nosotros.html">ℹ Nosotros</a></li>
+            <li><a href="contacto.html"> Contacto</a></li>
         </ul>
         <div class="nav-actions">
             <a href="carrito.html" class="nav-icon active" id="carrito-btn">
-                🛒 <span class="cart-count">0</span>
+                 <span class="cart-count">0</span>
             </a>
-            <a href="cuenta.html" class="nav-icon">👤 Cuenta</a>
+            <a href="cuenta.html" class="nav-icon"> Cuenta</a>
         </div>
     </nav>
 
@@ -39,7 +39,7 @@
                 <h2>Tu carrito está vacío</h2>
                 <p>¡Agrega algunos productos increíbles a tu carrito!</p>
                 <a href="productos.html" class="btn-seguir-comprando">
-                    🛍️ Seguir Comprando
+                     Seguir Comprando
                 </a>
             </div>
 
@@ -60,7 +60,7 @@
 
                 <div class="carrito-resumen">
                     <div class="resumen-card">
-                        <h3>📋 Resumen del Pedido</h3>
+                        <h3> Resumen del Pedido</h3>
                         <div class="resumen-linea">
                             <span>Subtotal:</span>
                             <span id="subtotal">$0.00</span>
