--- a/frontend/cuenta.html
+++ b/frontend/cuenta.html
@@ -10,19 +10,19 @@
 <body>
     <nav class="navbar">
         <div class="nav-brand">
-            <div class="nav-logo">🍷 LicoresPage</div>
+            <div class="nav-logo"> LicoresPage</div>
         </div>
         <ul class="nav-links">
-            <li><a href="inicio.html">🏠 Inicio</a></li>
-            <li><a href="productos.html">📦 Productos</a></li>
-            <li><a href="sobre-nosotros.html">ℹ️ Nosotros</a></li>
-            <li><a href="contacto.html">📞 Contacto</a></li>
+            <li><a href="inicio.html"> Inicio</a></li>
+            <li><a href="productos.html"> Productos</a></li>
+            <li><a href="sobre-nosotros.html">ℹ Nosotros</a></li>
+            <li><a href="contacto.html"> Contacto</a></li>
         </ul>
         <div class="nav-actions">
             <a href="carrito.html" class="nav-icon" id="carrito-btn">
-                🛒 <span class="cart-count">0</span>
+                 <span class="cart-count">0</span>
             </a>
-            <a href="cuenta.html" class="nav-icon active">👤 Cuenta</a>
+            <a href="cuenta.html" class="nav-icon active"> Cuenta</a>
         </div>
     </nav>
 
@@ -36,19 +36,19 @@
                 </div>
                 
                 <div class="auth-tabs">
-                    <button class="tab-btn active" data-tab="login">🔐 Iniciar Sesión</button>
-                    <button class="tab-btn" data-tab="register">📝 Registrarse</button>
+                    <button class="tab-btn active" data-tab="login"> Iniciar Sesión</button>
+                    <button class="tab-btn" data-tab="register"> Registrarse</button>
                 </div>
 
                 <!-- Formulario de Login -->
                 <div id="login-form" class="auth-form active">
                     <form>
                         <div class="form-group">
-                            <label for="login-email">📧 Correo Electrónico</label>
+                            <label for="login-email"> Correo Electrónico</label>
                             <input type="email" id="login-email" placeholder="tu@email.com" required>
                         </div>
                         <div class="form-group">
-                            <label for="login-password">🔒 Contraseña</label>
+                            <label for="login-password"> Contraseña</label>
                             <input type="password" id="login-password" placeholder="••••••••" required>
                         </div>
                         <div class="form-options">
@@ -59,7 +59,7 @@
                             </label>
                             <a href="#" class="forgot-password">¿Olvidaste tu contraseña?</a>
                         </div>
-                        <button type="submit" class="btn-primary">🚀 Iniciar Sesión</button>
+                        <button type="submit" class="btn-primary"> Iniciar Sesión</button>
                     </form>
                 </div>
 
@@ -68,7 +68,7 @@
                     <form>
                         <div class="form-row">
                             <div class="form-group">
-                                <label for="register-name">👤 Nombre</label>
+                                <label for="register-name"> Nombre</label>
                                 <input type="text" id="register-name" placeholder="Tu nombre" required>
                             </div>
                             <div class="form-group">
