--- a/frontend/productos.html
+++ b/frontend/productos.html
@@ -10,19 +10,19 @@
 <body>
     <nav class="navbar">
         <div class="nav-brand">
-            <div class="nav-logo">🍷 LicoresPage</div>
+            <div class="nav-logo"> LicoresPage</div>
         </div>
         <ul class="nav-links">
             <li><a href="inicio.html">🏠 Inicio</a></li>
-            <li><a href="productos.html" class="active">📦 Productos</a></li>
-            <li><a href="sobre-nosotros.html">ℹ️ Nosotros</a></li>
-            <li><a href="contacto.html">📞 Contacto</a></li>
+            <li><a href="productos.html" class="active"> Productos</a></li>
+            <li><a href="sobre-nosotros.html"> Nosotros</a></li>
+            <li><a href="contacto.html"> Contacto</a></li>
         </ul>
         <div class="nav-actions">
             <a href="carrito.html" class="nav-icon" id="carrito-btn">
-                🛒 <span class="cart-count">0</span>
+                 <span class="cart-count">0</span>
             </a>
-            <a href="cuenta.html" class="nav-icon">👤 Cuenta</a>
+            <a href="cuenta.html" class="nav-icon"> Cuenta</a>
         </div>
     </nav>
 
