--- a/frontend/inicio.html
+++ b/frontend/inicio.html
@@ -32,26 +32,7 @@
             </section>
             <section class="destacados">
                 <h2>Licores Destacados</h2>
-                <div class="productos-grid">
-                    <div class="producto">
-                        <img src="img/vino.png" alt="Vino tinto premium">
-                        <h3>Vino Tinto Premium</h3>
-                        <p>Elegancia y sabor en cada copa.</p>
-                        <span class="precio">$19.990</span>
-                    </div>
-                    <div class="producto">
-                        <img src="img/whisky.png" alt="Whisky escocés">
-                        <h3>Whisky Escocés</h3>
-                        <p>Tradición y carácter único.</p>
-                        <span class="precio">$29.990</span>
-                    </div>
-                    <div class="producto">
-                        <img src="img/cerveza.png" alt="Cerveza artesanal">
-                        <h3>Cerveza Artesanal</h3>
-                        <p>Refrescante y llena de sabor.</p>
-                        <span class="precio">$5.990</span>
-                    </div>
-                </div>
+                <div class="productos-grid"></div>
             </section>
     </main>
     <script src="js/productos.js"></script>
