cambios de compatibilidad

--- a/frontend/carrito.html
+++ b/frontend/carrito.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Carrito de Compras - Licores Page</title>
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/carrito.css">
@@ -44,7 +44,7 @@
             </div>
 
             <!-- Carrito con productos -->
-            <div id="carrito-con-productos" class="carrito-content" style="display: none;">
+            <div id="carrito-con-productos" class="carrito-content">
                 <div class="carrito-productos">
                     <div class="productos-header-table">
                         <span>Producto</span>
