--- a/frontend/cuenta.html
+++ b/frontend/cuenta.html
@@ -106,7 +106,7 @@
         </div>
 
         <!-- Panel de usuario cuando está autenticado -->
-        <div id="user-panel" class="user-panel" style="display: none;">
+        <div id="user-panel" class="user-panel">
             <div class="panel-header">
                 <div class="user-welcome">
                     <h1>¡Hola, <span id="user-name">Usuario</span>! 👋</h1>
@@ -174,6 +174,7 @@
                         <div class="section-header">
                             <h2>📦 Mis Pedidos</h2>
                             <div class="pedidos-filter">
+                                <label for="filter-pedidos">Filtrar pedidos:</label>
                                 <select id="filter-pedidos">
                                     <option value="todos">Todos</option>
                                     <option value="pendiente">Pendientes</option>
