Eliminar icono de información en el enlace "Nosotros" en las páginas carrito, cuenta y productos. Mejorar la alineación de la caja de búsqueda en productos.

--- a/frontend/productos.html
+++ b/frontend/productos.html
@@ -13,7 +13,7 @@
             <div class="nav-logo"> LicoresPage</div>
         </div>
         <ul class="nav-links">
-            <li><a href="inicio.html">🏠 Inicio</a></li>
+            <li><a href="inicio.html"> Inicio</a></li>
             <li><a href="productos.html" class="active"> Productos</a></li>
             <li><a href="sobre-nosotros.html"> Nosotros</a></li>
             <li><a href="contacto.html"> Contacto</a></li>
