Añadir página de contacto y actualizar el logo en la página de inicio. Configurar ajustes de análisis de null en Java.

--- a/frontend/inicio.html
+++ b/frontend/inicio.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
         <div class="nav-brand">
-            <div class="nav-logo"> Licores</div>
+            <div class="nav-logo"> LicoresPage</div>
         </div>
         <ul class="nav-links">
             <li><a href="inicio.html" class="active"> Inicio</a></li>
