Actualizar enlace de "Comprar ahora" para redirigir a la página de productos.

--- a/frontend/inicio.html
+++ b/frontend/inicio.html
@@ -35,7 +35,7 @@
                     <div class="hero-text">
                         <h1>Descubre los mejores licores</h1>
                         <p>Explora nuestra selección premium de vinos, cervezas y destilados. ¡Ofertas exclusivas y envíos rápidos!</p>
-                        <a href="#" class="btn-principal">Comprar ahora</a>
+                        <a href="productos.html" class="btn-principal">Comprar ahora</a>
                     </div>
                     </div>
             </section>
