feat: Implementar lógica de autenticación y enlaces de cuenta

--- a/frontend/cuenta.html
+++ b/frontend/cuenta.html
@@ -23,9 +23,11 @@
             <a href="carrito.html" class="nav-icon" id="carrito-btn">
                  <span class="cart-count">0</span>
             </a>
-            <a href="cuenta.html" class="nav-icon active"> Cuenta</a>
+            <a href="login.html" class="nav-icon active"> Cuenta</a>
         </div>
     </nav>
+
+    <script src="js/authLink.js"></script>
 
     <main>
         <!-- Pantalla de login/registro cuando no está autenticado -->
