--- a/frontend/nosotros.html
+++ b/frontend/nosotros.html
@@ -11,7 +11,8 @@
 <nav class="navbar">
         <div class="nav-brand">
             <div class="nav-logo"> LicoresPage</div>
-        </div>
+  </div>
+  <script src="js/authLink.js"></script>
         <ul class="nav-links">
             <li><a href="inicio.html" > Inicio</a></li>
             <li><a href="productos.html"> Productos</a></li>
@@ -26,7 +27,7 @@
 </svg>
                  <span class="cart-count">0</span>
             </a>
-            <a href="cuenta.html" class="nav-icon"> Cuenta</a>
+            <a href="login.html" class="nav-icon"> Cuenta</a>
         </div>
     </nav>
   <div class="container">
