--- a/frontend/carrito.html
+++ b/frontend/carrito.html
@@ -22,9 +22,10 @@
             <a href="carrito.html" class="nav-icon active" id="carrito-btn">
                  <span class="cart-count">0</span>
             </a>
-            <a href="cuenta.html" class="nav-icon"> Cuenta</a>
+            <a href="login.html" class="nav-icon"> Cuenta</a>
         </div>
     </nav>
+    <script src="js/authLink.js"></script>
 
     <main>
         <div class="carrito-header">
