--- a/frontend/productos.html
+++ b/frontend/productos.html
@@ -11,7 +11,8 @@
     <nav class="navbar">
         <div class="nav-brand">
             <div class="nav-logo"> LicoresPage</div>
-        </div>
+    </div>
+    <script src="js/authLink.js"></script>
         <ul class="nav-links">
             <li><a href="inicio.html"> Inicio</a></li>
             <li><a href="productos.html" class="active"> Productos</a></li>
@@ -22,7 +23,7 @@
             <a href="carrito.html" class="nav-icon" id="carrito-btn">
                  <span class="cart-count">0</span>
             </a>
-            <a href="cuenta.html" class="nav-icon"> Cuenta</a>
+            <a href="login.html" class="nav-icon"> Cuenta</a>
         </div>
     </nav>
 
